Bug 196975 - cookies: when I search for a cookie-setting (accept/ask/decline) and change one, all settings which weren't in the result seem to disappear
Summary: cookies: when I search for a cookie-setting (accept/ask/decline) and change o...
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: kcookiejar (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 182806 187793 208081 209182 212552 237049 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-06-18 09:43 UTC by Arne Babenhauserheide
Modified: 2010-09-18 10:46 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arne Babenhauserheide 2009-06-18 09:43:25 UTC
Version:           4.2.4 (KDE 4.2.4) (using 4.2.4 (KDE 4.2.4), Gentoo)
Compiler:          x86_64-pc-linux-gnu-gcc
OS:                Linux (x86_64) release 2.6.29-hh2

Reproduce: 

* Open settings
* Select cookies
* put "kde" in the cookie-settings. 
* select a setting and modify it (e.g. ask instead of accept/decline). 
* press OK. 

For me that makes all non-shown cookie-settings disappear.
Comment 1 Andre Woebbeking 2009-06-28 19:51:53 UTC
I can confirm this, also for 4.3 RC1.
Comment 2 Skander Morgenthaler 2009-08-03 12:08:35 UTC
I can also confirm this (4.3RC3), was just bitten by it again. It is really annoying as I want to be asked for each cookie/domain. Well, I guess the next round of confirmation diaglogues will annoy me in the next few hours :(

I think this was present since 4.0 at least, but I might remember wrong.
Comment 3 kgw 2009-09-25 12:02:04 UTC
I too can confirm for KDE 4.3.0 and 4.3.1 - just happened again. Very annoying!
Comment 4 Arne Babenhauserheide 2009-09-25 12:17:09 UTC
The only workaround I know is to clear the filter text field before I press OK so all are shown again. I don't know if that really makes the difference, but I didn't have disappearing cookies since I began using the workaround.
Comment 5 Maksim Orlovich 2009-09-25 17:05:25 UTC
Hmm, sounds like it's both annoying and easy-to-fix... So I should just fix it before I forget about it.
Comment 6 Cristian Tibirna 2009-12-24 16:47:49 UTC
I confirm this for KDE 4.3.4 "release 2". It is indeed very annoying.
Comment 7 Chris Spiegel 2010-08-11 20:40:44 UTC
This bug is still present in 4.5.0.

If it's not going to be fixed, I recommend removing the option from the GUI.
Comment 8 Dawit Alemayehu 2010-08-18 10:15:15 UTC
*** Bug 209182 has been marked as a duplicate of this bug. ***
Comment 9 m.wege 2010-08-18 10:31:34 UTC
It would be so great, if this would be fixed. This is my most hated KDE bug.
Comment 10 Dawit Alemayehu 2010-08-18 10:47:18 UTC
SVN commit 1165097 by adawit:

Don't loose per site cookie policy settings when modifying it after filtering the list.

BUG:196975


 M  +10 -8     kcookiespolicies.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1165097
Comment 11 Dawit Alemayehu 2010-08-18 10:53:33 UTC
*** Bug 187793 has been marked as a duplicate of this bug. ***
Comment 12 Maarten ter Huurne 2010-08-18 17:21:30 UTC
*** Bug 182806 has been marked as a duplicate of this bug. ***
Comment 13 m.wege 2010-08-24 08:12:33 UTC
Thanks for fixing this. Will it be part of KDE SC 4.5.1?
Comment 14 Andre Woebbeking 2010-08-24 08:15:21 UTC
> --- Comment #13 from  <m wege web de>  2010-08-24 08:12:33 ---
> Thanks for fixing this. Will it be part of KDE SC 4.5.1?

Yes :-)
Comment 15 Dawit Alemayehu 2010-09-18 05:40:53 UTC
*** Bug 212552 has been marked as a duplicate of this bug. ***
Comment 16 Dawit Alemayehu 2010-09-18 07:52:53 UTC
*** Bug 208081 has been marked as a duplicate of this bug. ***
Comment 17 Dawit Alemayehu 2010-09-18 10:46:26 UTC
*** Bug 237049 has been marked as a duplicate of this bug. ***