Don't loose per site cookie policy settings when modifying it after filtering the list.

BUG:196975

svn path=/trunk/KDE/kdebase/apps/; revision=1165097